<resources>
   <string name="app_name">Kalkulator BMI</string>
   <string name="mass">Waga</string>
   <string name="height">Wzrost</string>
   <string name="bmi_button"> Oblicz moje BMI </string>
   <string name="bmi_label">Twoje BMI to:</string>
   <string name="home">Strona startowa</string>
   <string name="button1_bmi">Kalkulator BMI</string>
   <string name="button2_ppm">Kalkulator PPM</string>
   <string name="button3_recipes">Przepisy</string>
   <string name="button4_quiz">Quiz</string>
   <string name="button5_cannon">Gra</string>

   <string name="ppm_app_name">Kalkulator PPM</string>
   <string name="label_woman">Kobieta</string>
   <string name="label_man">Mężczyzna</string>

   <string name="ppm_label">Twoje PPM wynosi:</string>
   <string name="ppm_button"> Oblicz moje PPM </string>
   <string name="age">Wiek</string>

   <string name="app_recipes">Ciekawe przepisy</string>

   <string name="app_quiz">QUIZ</string>
   <string name="action_settings">Settings</string>
   <string name="number_of_choices">Number of Choices</string>
   <string name="number_of_choices_description">Display 2, 4, 6 or 8 guess buttons</string>
   <string name="world_regions">Regions</string>
   <string name="world_regions_description">Regions to include in the quiz</string>
   <string name="guess_country">TREŚĆ PYTANIA</string>
   <string name="results">%1$d guesses, %2$.02f%% correct</string>
   <string name="incorrect_answer">Incorrect!</string>
   <string name="default_region_message">One region must be selected. Setting North America as the default region.</string>
   <string name="restarting_quiz">Quiz will restart with your new settings</string>
   <string name="question">Question %1$d of %2$d</string>
   <string name="reset_quiz">Reset Quiz</string>
   <string name="image_description">Image of the current flag in the quiz</string>
   <string name="default_region">North_America</string>
   <string name="title_activity_settings">Settings</string>

   <string name="app_cannon">Game :)</string>
   <string name="results_format">Shots fired: %1$d\nTotal time: %2$.1f</string>
   <string name="reset_game">Reset Game</string>
   <string name="win">You win!</string>
   <string name="lose">You lose!</string>
   <string name="time_remaining_format">Time remaining: %.1f seconds</string>

   <string name="popup_header">Podsumowanie</string>
   <string name="popup_close">Zamknij</string>

</resources>
